--- a/package.json
+++ b/package.json
@@ -3,9 +3,26 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "bootstrap": "^4.3.1",
+    "car-models": "^1.0.1",
+    "car-names": "^1.10.4",
+    "dateformat": "^3.0.3",
+    "gh-pages": "^2.0.1",
+    "jquery": "^3.3.1",
+    "mdbreact": "^4.11.1",
+    "popper.js": "^1.14.7",
     "react": "^16.8.6",
+    "react-bootstrap-table": "^4.3.1",
+    "react-data-table-component": "^1.4.6",
+    "react-datepicker": "^2.3.0",
+    "react-datetime-picker": "^2.3.0",
     "react-dom": "^16.8.6",
-    "react-scripts": "2.1.8"
+    "react-router-dom": "^5.0.0",
+    "react-scripts": "2.1.8",
+    "react-select": "^2.4.2",
+    "react-table": "^6.9.2",
+    "styled-components": "^4.2.0",
+    "tablesort": "^5.1.0"
   },
   "scripts": {
     "start": "react-scripts start",
